[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-market-maker-simulator"
version = "0.1.0"
description = "Research-grade reinforcement learning market making simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "torch>=2.2",
]

[project.scripts]
rl-market-maker = "rl_market_maker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
